Predict Co2Emissions using different features

--- a/fuelConsumption.ipynb
+++ b/fuelConsumption.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "22460e39-1e5f-4530-9d0c-556e5c3ac235",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "4                  10.6                        27           244  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,17 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "1575cbaa-3b14-4326-b2c9-0757f7f91d0a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -442,7 +435,7 @@
        "8                  11.6           267  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "c68bccfe-e72e-4d36-8e5e-f540e4c6860d",
    "metadata": {},
    "outputs": [],
@@ -471,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "6d62dad2-dd78-4661-be27-b68e48c076db",
    "metadata": {},
    "outputs": [
@@ -544,8 +537,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1109897e-b9d9-4991-91cf-ed355808d59c",
+   "metadata": {},
+   "source": [
+    "## Using the features FUELCONSUMPTION_COMB, EngineSize and Cylinders of cars to predict Co2Emmisions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "a19126ee-5d90-45e4-b746-04d37ec837e0",
    "metadata": {},
    "outputs": [
@@ -553,13 +554,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients:  [[10.93667259  7.4706854   9.66744525]]\n"
+      "Coefficients:  [[10.75670459  7.85632197  9.467624  ]]\n"
      ]
     }
    ],
    "source": [
-    "## Using the features FUELCONSUMPTION_COMB, EngineSize and Cylinders of cars\n",
-    "\n",
     "from sklearn import linear_model\n",
     "regr = linear_model.LinearRegression()\n",
     "x = np.asanyarray(train[['ENGINESIZE', 'CYLINDERS', 'FUELCONSUMPTION_COMB']])\n",
@@ -570,9 +569,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea00b476-ba25-4dd0-9692-88423a4b33b7",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4e604cac-9ab2-4f06-8b4e-2cd0f866ceb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE) : 644.47\n",
+      "Variance score: 0.85\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages/sklearn/base.py:486: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_hat = regr.predict(test[['ENGINESIZE', 'CYLINDERS', 'FUELCONSUMPTION_COMB']])\n",
+    "x = np.asanyarray(test[['ENGINESIZE', 'CYLINDERS', 'FUELCONSUMPTION_COMB']])\n",
+    "y = np.asanyarray(test[['CO2EMISSIONS']])\n",
+    "print(\"Mean Squared Error (MSE) : %.2f\"\n",
+    "      % np.mean((y_hat - y) ** 2))\n",
+    "\n",
+    "# Explained variance score: 1 is perfect prediction\n",
+    "print('Variance score: %.2f' % regr.score(x, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93712368-b1f5-4036-bdeb-15adc93abab9",
+   "metadata": {},
+   "source": [
+    "## Using the features FUELCONSUMPTION_CITY and FUELCONSUMPTION_HWY to predict co2Emissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9a2f0093-a0f8-4e1e-bff7-88d2c0d65be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients :  [[10.73171757  7.49656027  6.19287576  2.98849174]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "regr = linear_model.LinearRegression()\n",
+    "x = np.asanyarray(train[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_CITY','FUELCONSUMPTION_HWY']])\n",
+    "y = np.asanyarray(train[['CO2EMISSIONS']])\n",
+    "regr.fit(x, y)\n",
+    "\n",
+    "# The coefficients\n",
+    "print('Coefficients : ', regr.coef_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59609606-852b-4219-bbcc-11c7b203ef20",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "20311806-a1ea-42b7-8953-4e6b53f94882",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE) : 646.49\n",
+      "variance score: 0.84\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages/sklearn/base.py:486: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_hat = regr.predict(test[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_CITY', 'FUELCONSUMPTION_HWY']])\n",
+    "x = np.asanyarray(test[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_CITY', 'FUELCONSUMPTION_HWY']])\n",
+    "y = np.asanyarray(test[['CO2EMISSIONS']])\n",
+    "print(\"Mean Squared Error (MSE) : %.2f\"\n",
+    "      % np.mean((y_hat - y) ** 2))\n",
+    "\n",
+    "# Explained variance regression score for these features\n",
+    "print('variance score: %.2f' % regr.score(x, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1889efc8-2248-4713-9b37-0d4f05eaf750",
+   "metadata": {},
+   "source": [
+    "## Verdict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab89d41a-834c-4f9a-bee8-01519dc43931",
+   "metadata": {},
+   "source": [
+    "With a variance score of 0.88, the features FUELCONSUMPTION_COMB, EngineSize and Cylinders of cars better predict Co2Emmisions than the features FUELCONSUMPTION_CITY and FUELCONSUMPTION_HWY "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f490e3e9-b44b-4a16-bccb-e0c7e9cb76c2",
+   "id": "d5c6e460-e79b-4178-a18f-1efb64a17502",
    "metadata": {},
    "outputs": [],
    "source": []
