--- a/fuelConsumption.ipynb
+++ b/fuelConsumption.ipynb
@@ -697,7 +697,7 @@
    "id": "ab89d41a-834c-4f9a-bee8-01519dc43931",
    "metadata": {},
    "source": [
-    "With a variance score of 0.88, the features FUELCONSUMPTION_COMB, EngineSize and Cylinders of cars better predict Co2Emmisions than the features FUELCONSUMPTION_CITY and FUELCONSUMPTION_HWY "
+    "With a variance score of 0.85, the features FUELCONSUMPTION_COMB, EngineSize and Cylinders of cars marginally better predict Co2Emmisions than the features FUELCONSUMPTION_CITY and FUELCONSUMPTION_HWY "
    ]
   },
   {
